benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-mix016_pso.opt_tso.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix016_pso.opt_tso.opt.yml/mix016_pso.opt_tso.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix016_pso.opt_tso.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_adjts5gt/tmp/tmp3ug7k291.c
Compilation started
/tmp/BenchExec_run_adjts5gt/tmp/tmp3ug7k291.c: In function ‘P1’:
/tmp/BenchExec_run_adjts5gt/tmp/tmp3ug7k291.c:588:19: error: ‘FALSE’ undeclared (first use in this function)
  588 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_adjts5gt/tmp/tmp3ug7k291.c:588:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_adjts5gt/tmp/tmp3ug7k291.c: In function ‘P2’:
/tmp/BenchExec_run_adjts5gt/tmp/tmp3ug7k291.c:628:19: error: ‘FALSE’ undeclared (first use in this function)
  628 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_adjts5gt/tmp/tmp3ug7k291.c:629:19: error: ‘TRUE’ undeclared (first use in this function)
  629 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
